--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,18 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.6.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.6.5'
+
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.7.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.3'
+    implementation 'com.google.android.gms:play-services-location:11.0.2'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.14.0'
+
+
+
 
 }
