--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,6 @@
         <activity
             android:name=".Aukeratuargazkiegokia_1"
             android:screenOrientation="landscape" />
-
         <activity
             android:name=".ElementuakBilatuArgazkian_2"
             android:screenOrientation="landscape" />
@@ -70,9 +69,11 @@
         <activity
             android:name=".Desberdintasunabilatu_4_argazki2"
             android:screenOrientation="landscape" />
-        <activity android:name=".Desberdintasunabilatu_4_argazki3"
+        <activity
+            android:name=".Desberdintasunabilatu_4_argazki3"
+            android:screenOrientation="landscape" />
+        <activity android:name=".Argazkiaaztertu_3"
             android:screenOrientation="landscape"></activity>
-
     </application>
 
 </manifest>
