Gune 2 jarduera 2 (en proceso)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,9 +72,10 @@
         <activity
             android:name=".Desberdintasunabilatu_4_argazki3"
             android:screenOrientation="landscape" />
-
-        <activity android:name=".Argazkiaaztertu_3"
-            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".Argazkiaaztertu_3"
+            android:screenOrientation="landscape" />
+        <activity android:name=".Galderenerantzunaaukeratu_5"></activity>
     </application>
 
 </manifest>
