Gune 2 jarduera 2 (solo falta que al sonar el primer audio no deje seleccionar nada en el selec hasta que termine)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,8 @@
         <activity
             android:name=".Argazkiaaztertu_3"
             android:screenOrientation="landscape" />
-        <activity android:name=".Galderenerantzunaaukeratu_5"></activity>
+        <activity android:name=".Galderenerantzunaaukeratu_5"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
