gune 2 jarduera 3 (en proceso), cambio en la bd nombe del juego y añadido textos al strings.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,7 +78,9 @@
         <activity
             android:name=".Galderenerantzunaaukeratu_5"
             android:screenOrientation="landscape" />
-        <activity android:name=".DetailsActivity"></activity>
+        <activity android:name=".DetailsActivity" />
+        <activity android:name=".Esaldizuzenaaukeratu_6"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
