--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,7 +33,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".menu_main" />
-        <activity android:name=".galery" />
+        <activity android:name=".galery"
+            android:screenOrientation="portrait"/>
         <activity android:name=".list" />
         <activity
             android:name=".MapsActivity"
@@ -78,7 +80,8 @@
         <activity
             android:name=".Galderenerantzunaaukeratu_5"
             android:screenOrientation="landscape" />
-        <activity android:name=".DetailsActivity" />
+        <activity android:name=".DetailsActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".Esaldizuzenaaukeratu_6"
             android:screenOrientation="landscape"></activity>
     </application>
