--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,8 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".menu_main" />
-        <activity android:name=".galery"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".galery" />
         <activity android:name=".list" />
         <activity
             android:name=".MapsActivity"
@@ -80,8 +78,7 @@
         <activity
             android:name=".Galderenerantzunaaukeratu_5"
             android:screenOrientation="landscape" />
-        <activity android:name=".DetailsActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".DetailsActivity" />
         <activity android:name=".Esaldizuzenaaukeratu_6"
             android:screenOrientation="landscape"></activity>
     </application>
