--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,20 +21,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".menu_main" />
-        <activity android:name=".galery"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".galery"
+            android:screenOrientation="portrait" />
         <activity android:name=".list" />
         <activity
             android:name=".MapsActivity"
@@ -80,14 +79,21 @@
         <activity
             android:name=".Galderenerantzunaaukeratu_5"
             android:screenOrientation="landscape" />
-
-        <activity android:name=".DetailsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".DetailsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Esaldizuzenaaukeratu_6"
             android:screenOrientation="landscape" />
-        <activity android:name=".Argazkiaaztertu_7"></activity>
+        <activity android:name=".Argazkiaaztertu_7" />
 
+        <activity android:name=".splashscreen"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
