--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme">
-
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity android:name=".menu_main" />
         <activity
             android:name=".galery"
@@ -86,14 +84,16 @@
             android:name=".Esaldizuzenaaukeratu_6"
             android:screenOrientation="landscape" />
         <activity android:name=".Argazkiaaztertu_7" />
-
-        <activity android:name=".splashscreen"
+        <activity
+            android:name=".splashscreen"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".komikia_8"></activity>
     </application>
 
 </manifest>
