--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,18 +25,30 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity android:name=".splashscreen"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme"></activity>
         <activity android:name=".menu_main" />
+
         <activity
             android:name=".galery"
             android:screenOrientation="portrait" />
         <activity android:name=".list" />
+
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
+
         <activity
             android:name=".details_list"
             android:screenOrientation="landscape" />
@@ -84,15 +96,7 @@
             android:name=".Esaldizuzenaaukeratu_6"
             android:screenOrientation="landscape" />
         <activity android:name=".Argazkiaaztertu_7" />
-        <activity
-            android:name=".splashscreen"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".komikia_8"></activity>
     </application>
 
