juegos desde mapa arreglado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,7 +96,8 @@
             android:screenOrientation="landscape" />
         <activity android:name=".Argazkiaaztertu_7" />
         <activity android:name=".komikia_8" />
-        <activity android:name=".ajustes"></activity>
+        <activity android:name=".ajustes"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
