zirgarriak juego cambio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,7 +95,10 @@
         <activity
             android:name=".Esaldizuzenaaukeratu_6"
             android:screenOrientation="landscape" />
-        <activity android:name=".Argazkiaaztertu_7" />
+        <activity android:name=".Argazkiaaztertu_7"
+            android:screenOrientation="landscape"/>
+
+
         <activity android:name=".komikia_8" />
         <activity android:name=".ajustes"
             android:screenOrientation="portrait"></activity>
