Descarga de fuentes, marcadores de colores, cambio de color en la UI, onclick de marcador(temp)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,10 @@
         <activity android:name=".komikia_8" />
         <activity android:name=".ajustes"
             android:screenOrientation="portrait"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
