--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     implementation 'com.android.support:design:28.0.0-alpha1'
 
-
+    implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    implementation 'com.jsibbold:zoomage:1.1.0'
+    implementation 'com.android.support:cardview-v7:26.+'
 
 }
