--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,10 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name=".menu_main" />
+        <activity android:name=".menu_main"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".galery"
             android:screenOrientation="portrait" />
@@ -88,7 +90,7 @@
             android:name=".Galderenerantzunaaukeratu_5"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".DetailsActivity"
+            android:name=".Gallerypreview"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Esaldizuzenaaukeratu_6"
