--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,12 +104,19 @@
             android:name=".ajustes"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".Debaterakogalderak_9"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Argazkia_10"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Erantzunzuzenaaukeratu_11"
+            android:screenOrientation="portrait" >
+
+
+        </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-
-        <activity android:name=".Debaterakogalderak_9"></activity>
 
     </application>
 
