--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,18 +113,20 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Erantzunzuzenaaukeratu_11"
-            android:screenOrientation="portrait"/>
-
-        <activity android:name=".Argazkiaktaulansailkatu_12"
-            android:screenOrientation="landscape"/>
-
-        <activity android:name=".Argazkiaksailkatu_13"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Argazkiaktaulansailkatu_12"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Argazkiaksailkatu_13"
+            android:screenOrientation="landscape" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-        
+
+        <activity android:name=".Argazkiakordenatu_14"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
