--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,12 +120,24 @@
         <activity
             android:name=".Argazkiaksailkatu_13"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".Argazkiakordenatu_14"
+            android:screenOrientation="landscape" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".Argazkiakordenatu_14"
+        <activity
+            android:name=".PortadatxurrukakoActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".PortadaariatzaetxeaActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Paragrafoabetehitzekin_15"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Informazioakuadroabete_16"
             android:screenOrientation="landscape"></activity>
     </application>
 
