--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,8 @@
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".details_list" />
+        <activity android:name=".details_list"
+            android:screenOrientation="portrait"/>
 
         <!-- JUEGOS -->
         <activity
