--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,7 +148,8 @@
         <activity
             android:name=".Erantzunzuzenaaukeratu_17"
             android:screenOrientation="portrait" />
-        <activity android:name=".Informazioakuadroabete_19"></activity>
+        <activity android:name=".Informazioakuadroabete_19"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
