cambio colores de texto y arreglos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ajustes"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Debaterakogalderak_9"
